# assistant

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs
src/features/: file_formatter.rs  mod.rs
src/utils/: clipboard.rs  mod.rs
tests/: integration_test.rs
